--- a/src/index.css
+++ b/src/index.css
@@ -124,6 +124,9 @@ a{
     display: flex;
     justify-content: center;
 }
+.switchOff:hover ,.switchOn:hover {
+    cursor: pointer;
+}
 .searchBar{
     padding: 1rem;
     box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.468);
