--- a/src/Article/Article.css
+++ b/src/Article/Article.css
@@ -48,12 +48,12 @@
     gap: 4rem;
     font-size: large;
 }
-.articleUser > div >img{
+.articleUser > a >img{
     width: 3rem;
     border-radius: 50%;
     border: 3px solid var(--text);
 }
-.articleUser > div{
+.articleUser > a{
     display: flex;
     align-items: center;
     gap: 1rem;
